Location picture in results now links to location show

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.number_field :region_id %>
   </div>
   <div class="field">
-    <%= f.label :lattitude %><br />
-    <%= f.text_field :lattitude %>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
   </div>
   <div class="field">
     <%= f.label :longitude %><br />
