--- a/app/views/studies/results.html.erb
+++ b/app/views/studies/results.html.erb
@@ -3,14 +3,14 @@
 <table class="table table-striped table-hover">
   <tr>
     <th>Location</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <th>Region</th>
-    <th>Times Favored</th>
-    <th>Total Votes</th>
-    <th>% Favored</th>
+    <th><%= sortable_column "Latitude", :column => "latitude" %></th>
+    <th><%= sortable_column "Longitude", :column => "longitude" %></th>
+    <th><%= sortable_column "Region", :column => "region_name" %></th>
+    <th><%= sortable_column "Times Favored", :column => "chosen" %></th>
+    <th><%= sortable_column "Total Votes", :column => "total_votes" %></th>
+    <th><%= sortable_column "% Favored", :column => "percent_chosen" %></th>
   </tr>
-  <% @study.results.each do |location|
+  <% @page_results.each do |location|
     total = location['chosen'].to_i + location['rejected'].to_i -%>
   <tr>
     <td width="150"><a href="/locations/<%= location['location_id'] %>"><img src="http://maps.googleapis.com/maps/api/streetview?size=150x80&location=<%= location['latitude'] %>,%20<%= location['longitude'] %>&heading=<%= location['heading'] %>&pitch=<%= location['pitch'] %>&sensor=false" /></a></td>
@@ -23,3 +23,4 @@
   </tr>
   <% end %>
 </table>
+<%= will_paginate (@page_results) %>
