--- a/config/deploy/database.yml.erb
+++ b/config/deploy/database.yml.erb
@@ -9,6 +9,15 @@ development:
 test:
   database: <%= shared_path %>/db/test.sqlite3
   <<: *base
+staging:
+  adapter: mysql2
+  database: <%= application %>_staging
+  username: <%= database_user %>
+  password: <%= Capistrano::CLI.password_prompt("Enter MySQL database password: ") %>
+  encoding: utf8
+  timeout: 5000
+  host: <%= database_server %>
+  port: 3306
 production:
   adapter: mysql2
   database: <%= application %>_production
