--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,14 @@
 <h2>Sign up</h2>
+<p> After reviewing our <%= link_to 'User Policy', policies_path %>, you can sign up using an account from 
+one of the following providers:</p>
 
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <%= link_to "Sign up with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+  <% end -%>
+<% end -%>
+<br/><br/>
+<p>Or, create a new account by fill in the information below.  </p>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -17,4 +26,4 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
