--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -42,7 +42,7 @@
 
 <div class="row text-center" id="end-text">
         <div class="container">
-        <p>c. 2013 The Ohio State University | <a href="">Privacy Policy</a> | Help</p>
+        <p>c. 2013 The Ohio State University | <%= link_to 'Privacy Policy', policies_path %> | <%= link_to t('.help'), help_path %></p>
         </div>
     </div>
         
