--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,28 @@
 <h1>Help</h1>
-<h2>Create a Study</h2>
+<h3>Create a User Account</h3>
+<p>Go to the <a href="<%= new_user_registration_path %>">Sign Up</a> page.  User accounts can be created 
+using existing accounts on Coursera, Facebook or Twitter.
+
+<h4>Twitter</h4><p>You will be directed to your Twitter account to authorize OSUStreetSeen.  You will then be redirected back 
+to StreetSeen, where you will be prompted to enter a valid email address.  StreetSeen usernames 
+will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
+you can also do so on this screen.  Click on Sign Up to finish the process.</p>
+
+<h4>Facebook</h4><p>You will be directed to your Facebook account to authorize OSUStreetSeen.  You will then be redirected back 
+to StreetSeen, where you will be prompted to enter a valid email address.  StreetSeen usernames 
+will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
+you can also do so on this screen.  Click on Sign Up to finish the process.</p>
+
+<h4>Coursera</h4><p>You will be directed to Coursera to login with your Coursera credentials.  You will then be redirected back 
+to StreetSeen, where you will be prompted to enter a valid username.  StreetSeen usernames 
+will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
+you can also do so on this screen.  Click on Sign Up to finish the process  </p>
+
+<h4>StreetSeen Only</h4><p>If you do not have an account with any of these providers, you can create a new account by filling in a 
+username, email address and password.  StreetSeen usernames will be displayed throughout the site associated with 
+user-generated content. Then, click on Sign Up.</p>
+
+<h3>Create a Study</h3>
 <p>To create a study, you need to have an account and be logged in.  If you're not, <%= link_to "Go set one up or Log in", new_user_session_path %> and then come back.  We'll wait.</p>
 <p>Ok, to create our study we need to first create the question we want to ask, and then select a group of images to compare with each other.  To get started, click on Public Studies above and follow these steps:
 <ol>
