voting refactored partial + model

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,37 +1,3 @@
 <!-- select a random study -->
-<% @study = Study.where(:active => true).sample(1) %>
-<!-- select 2 random locations from a random region from a region set within the study -->
-<% @locations = @study[0].locations.sample(2) %>
-<% @imagelink1 = "http://maps.googleapis.com/maps/api/streetview?size=570x370&location=" + @locations[0].latitude.to_s() + "%20" + @locations[0].longitude.to_s() + "&sensor=false" %>
-<% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=570x370&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
-<div class="row" id="display-question">
-  <div class="span12 text-center">
-    <h3>Which image <%= @study[0].question %>?</h3>
-  </div>
-</div>
-<div class="row text-center">
-  <div class="span6">
-    <div class="vote-image">
-      <%= link_to image_tag("#{@imagelink1}", :size => "570x370"), comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id, :study_id => @study[0].id}) , :method => :post %>
-    </div>
-    <div class="vote-button">
-      <%= link_to '1', comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id, :study_id => @study[0].id}) , :method => :post, :class => 'vote-button-text' %>
-    </div>
-  </div>
-  <div class="span6">
-    <div class="vote-image">
-      <%= link_to image_tag("#{@imagelink2}", :size => "570x370"), comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id, :study_id => @study[0].id}) , :method => :post %>
-    </div>
-    <div class="vote-button">
-      <%= link_to '2', comparisons_path(:comparison => {:chosen_location_id => @locations[1].id, :rejected_location_id => @locations[0].id, :study_id => @study[0].id}) , :method => :post, :class => 'vote-button-text' %>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="span12 skip-vote-row text-center">
-    <%= link_to 'Can\'t decide, let\'s skip this one.', :home %>
-  </div>
-</div>
-
+<%= render 'studies/vote', :study => @study %>
 
