Added doctype to application.html.erb and fixed JS errors

--- a/app/views/regions/_form.html.erb
+++ b/app/views/regions/_form.html.erb
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div style="width: 500px; float:left;margin-top:20px;margin-bottom:40px;">
-      <div id="map" class="map" style="width: 500; height: 350;"></div>
+      <div id="map" class="map" style="width:500px; height:350px;"></div>
 
       <div class="clearfix" style="margin-top:12px;">
         <%= image_tag("SS-drawn-polygon.png", :style => "width:70px;float:right;") %>
