--- a/app/views/studies/_form.html.erb
+++ b/app/views/studies/_form.html.erb
@@ -12,7 +12,7 @@
   <% if @study.active.nil? %>
   <%= f.input :question, label: 'Question for Voter',
               :input_html => { :style => 'width:400px;' },
-              :hint => 'Ask study participants to make a choice between two pictures. <br />Which place looks safer? <br />Which street looks more bike friendly?<br />Note: This cannot be changed after launching study.',
+              :hint => 'Ask study participants to make a choice between two Google StreetView scenes. <br />Which place looks safer? <br />Which street looks more bike friendly?<br />Note: This cannot be changed after launching study.',
               :value => 'Which place looks' %>
   <% else # only changeable if study never launched %>
   <%= f.input :question, label: 'Question for Voter',
@@ -33,7 +33,7 @@
   </button>
   <% else %>
   <button type="submit" class="btn btn-primary" >
-    <i class="icon-ok icon-white"></i> Add
+    <i class="icon-ok icon-white"></i> Create Study
   </button>
   <% end %>
 <% end %>
