--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -10,7 +10,7 @@
   <table class="table table-striped table-hover">
     <tr>
       <th><%= sortable_column "Name", :column => "name" %></th>
-      <th>Which image ...</th>
+      <th>Question</th>
       <% if @mine.nil? %>
       <th>User</th>
       <% end %>
@@ -24,7 +24,7 @@
       <% if study.active.nil? %>
         <% if user_signed_in? && study.user_id == current_user.id %>
           <td><%= link_to study.name, url_for(:controller => "studies", :action => "vote", :id => study) %></td>
-          <td><%= link_to study.question, study %>?</td>
+          <td><%= link_to study.question, url_for(:controller => "studies", :action => "vote", :id => study) %>?</td>
 
           <% if @mine.nil? %>
           <td><%= study.user.name %></td>
@@ -45,7 +45,7 @@
         <td><span class="label label-success">Open</span></td>
       <% else %>
         <td><%= link_to study.name, url_for(:controller => "studies", :action => "vote", :id => study) %></td>
-        <td><%= link_to study.question, study %>?</td>
+        <td><%= link_to study.question, url_for(:controller => "studies", :action => "vote", :id => study) %>?</td>
         <% if @mine.nil? %>
         <td><%= study.user.name %></td>
         <% end %>
