--- a/config/deploy/application.yml.erb
+++ b/config/deploy/application.yml.erb
@@ -1,4 +1,5 @@
-# application.yml template<% Capistrano::CLI.ui.say("Creating application.yml from template...") %>
+# Application configuration variables<% Capistrano::CLI.ui.say("Creating application.yml from template...") %>
+
 TWITTER_CONSUMER_KEY: "<%= Capistrano::CLI.ui.ask("Enter the Twitter consumer key: ") %>"
 TWITTER_CONSUMER_SECRET: "<%= Capistrano::CLI.password_prompt("Enter the Twitter consumer secret: ") %>"
 
@@ -7,4 +8,5 @@ FB_APP_SECRET: "<%= Capistrano::CLI.password_prompt("Enter the Facebook App secr
 
 COURSERA_APP_ID: "<%= Capistrano::CLI.ui.ask("Enter the Coursera App ID: ") %>"
 COURSERA_APP_SECRET: "<%= Capistrano::CLI.password_prompt("Enter the Cousera App secret: ") %>"
-#2013-04-01 Eventually will want to move other things in here, ie secret token
+
+SECRET_TOKEN: "<%= Capistrano::CLI.password_prompt("Enter the application secret token (rake secret): ") %>"
