--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -14,7 +14,7 @@ will be displayed throughout the site associated with user-generated content, so
 you can also do so on this screen.  Click on Sign Up to finish the process.</p>
 
 <h4>Coursera</h4><p>You will be directed to Coursera to login with your Coursera credentials.  You will then be redirected back 
-to StreetSeen, where you will be prompted to enter a valid username.  StreetSeen usernames 
+to StreetSeen, where you will be prompted to enter a valid username and email address.  StreetSeen usernames 
 will be displayed throughout the site associated with user-generated content, so if you would like to change your user name, 
 you can also do so on this screen.  Click on Sign Up to finish the process  </p>
 
