--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,21 @@
-<%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
-  <li><%= link_to t('.about'), about_path %></li>
-  <li><%= link_to t('.help'), help_path %></li>
-  <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
-
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      About
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><%= link_to 'Overview', about_path %></li>
+      <li><%= link_to t('.help'), help_path %></li>
+      <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
+    </ul>
+  </li>
   <li><%= link_to t('.public_studies'), studies_path %></li>
   <% if user_signed_in? %>
     <li><%= link_to t('.my_research'), url_for(:controller => "/studies", :action => "mine", :user_id => current_user.id) %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <%= current_user.username %>
+        My Account
         <b class="caret"></b>
       </a>
       <ul class="dropdown-menu">
