--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -20,7 +20,7 @@ images of what cities are really like. They aren’t doctored fancy pictures. Th
 quite similar to what you would see if you were exploring a city.</p>
 
 <p>Using the ideas from visual preference surveys constructed into pairwise surveys 
-we have created an easy to use tool that let’s anyone construct their own survey and 
+we have created an easy to use tool that lets anyone construct their own survey and 
 begin to understand what people think about places in cities across the world.</p>
 
 <h3>About the Team</h3>
@@ -43,9 +43,11 @@ school archives, the KSA Digital Library, and supports educational technology
 efforts by working on projects like StreetSeen.  Her professional interests include 
 digital content preservation and data visualization. You can send tweets in her 
 direction using <a href="http://www.twitter.com/meghanfrazer">@meghanfrazer</a>.</p>
+<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with the Ohio State University
+College of Engineering. His duties include software development, web design, systems 
+admiinistration, and consuming the office's excess caffine. You can drop him a line at 
+<a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
 <p><strong>Shaun Rowland</strong> bio coming soon</p>
-<p><strong>Corey Hinshaw</strong> bio coming soon</p>
-
 
 <h3>Credits</h3>
 <p>This project is based on the great work of Open Plans <a href="http://www.beautiful.st/">
