--- a/app/views/static_pages/policies.html.erb
+++ b/app/views/static_pages/policies.html.erb
@@ -1,25 +1,36 @@
-<h3>Privacy Policy</h3>
+<a id="privacy"></a><h2>Privacy Policy</h2>
 
-<p>StreetSeen can utilize your Facebook, Twitter or Coursera credentials to create an account.  This information 
-is not used for any other purpose then to authenticate you to the StreetSeen system.  StreetSeen usernames 
-will be displayed throughout the site associated with user-generated content.</p> 
+<p>StreetSeen can utilize your Facebook, Twitter, or Coursera credentials to create an account. This information 
+is not used for any other purpose than to authenticate you to the StreetSeen system. StreetSeen usernames 
+will be displayed throughout the site and associated with user-generated content.</p> 
 
-<p>College of Engineering websites collect non-personal information to improve functionality and content, 
+<p>StreetSeen collects non-personal information to improve functionality and content, 
 and to monitor the site's performance. Data is used to provide answers to specific questions about the 
 usage and performance of the web site or individual web pages. We leverage Google Analytics for this purpose 
 and may adopt additional tools in the future.</p>
 
-<p>The college works in a distributed environment; therefore, policies and procedures around data collected 
-on particular websites (for example, through site specific online forms) may vary. If there are questions, 
-visitors should contact the specific department, unit or organization that maintains the site.</p>
+<p>When participating in a study by voting on Streetview images, your IP address is recorded. This provides
+StreetSeen with a rough idea of your geographic location. This location data is contained within study results
+that may be made available to the public.</p>
 
-<h3>User Policy</h3>
-<p>Users creating content on StreetSeen agree to the following:
+<a id="terms"></a><h2>Terms of Use</h2>
+<h3>Study authors</h3>
+<p>Users creating content on StreetSeen agree to the following:</p>
 <ul><li>Content created via the StreetSeen application (including study questions, image sets and survey results) 
 is available for reuse by the public under the <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US">Creative Commons 
 Attribution-NonCommercial 3.0 Unported</a> license.</li>
-<li>StreetSeen will abide by the Privacy Policy listed above in the creation and deletion of accounts</li>
+<li>StreetSeen will abide by the Privacy Policy listed above in the creation and deletion of accounts.</li>
 <li>Studies which are "launched" will be available for public viewing and voting.</li>
-<li>Users will not harrass or intimidate other users via activities on StreetSeen. </li></ul>
+<li>Users will not harrass or intimidate other users via activities on StreetSeen.</li>
+<li>Users will not post or add content to a study that is illeggal, profane, obscene, vulgar, sexist, racist, or 
+discriminatory.</li></ul>
 
-<p>Any user who violates any of the policies on this page may have their account deleted.</p>
+<p>Any study author who violates any of the policies listed above may have their account suspended.</p>
+
+<h3>Study participants</h3>
+<p>Users participating in a study by voting on images agree to the following:</p>
+<ul><li>Voting results are available for reuse by the public under the <a href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US">Creative Commons Attribution-NonCommercial 3.0 Unported</a> license.</li>
+<li>StreetSeen will collect certain geographical data about the location of the computer used to cast each vote.
+These data will be avilable along with the oting results.</li></ul>
+
+<p>Users who do not agree to the terms above should refrain from participating in any studies on StreetSeen</p>
